--- a/Companies/HeyMentor/style.css
+++ b/Companies/HeyMentor/style.css
@@ -5,29 +5,40 @@
 }
 body{
 	color: #153b51;
+	
+}
+:root{
+	--dark:#153b51;
+	--light:#141414;
+	--smooth:white;
+	--borders:#FDB813;
 }
 a{
-	color: #153b51;
+	color: var(--light);
 	text-decoration: none !important;
-	border-bottom: 1px solid #153b51;
 	padding-bottom: 5px;
 	opacity: .9;
 }
+.viewmore{
+	color: var(--light);
+	font-weight: bold;
+	text-decoration: underline;
+	border-bottom: 2px solid var(--light);
+}
 a:hover{
-	color: #153b51;
+	color: var(--dark);
 	text-decoration: none !important;
-	border-bottom: 1px solid #153b51;
 	opacity: 1;
 	cursor: pointer;
 }
 .bg-light{
-	background-color: transparent !important;
+	background:var(--light) !important;
 	-webkit-box-shadow: 0px 3px 10px lightgrey;
 	        box-shadow: 0px 3px 10px lightgrey;
 
 }
 .navbar-brand{
-	color:#6A9D2E !important;
+	color:var(--smooth) !important;
 	font-size: 25px !important;
 	border:none;
 
@@ -41,7 +52,7 @@ a:hover{
 }
 
 .nav-link{
-	color: #153b51 !important;	
+	color: var(--smooth) !important;	
 	opacity: 0.8;
 	border:none;
 	}
@@ -52,23 +63,20 @@ a:hover{
 	transition: 0.2s;
 	border:none;
 }
+.fa-dice-d20{
+	color:var(--borders);
+}
 .btn-outline-success{
-	background-color: #6A9D2E !important;
-	border: none ;
-	color: white !important;
-	opacity: 0.8;
-	font-size: 14px;
-	border-radius: 2px;
+	background:var(--borders) !important;
+	border: none;
+	color: var(--smooth) !important;
+	font-size: 18px;
+	border-radius: 50px;
+	padding: 7px 25px;
 }
 .nav-item{
 	margin-right: 16px;
-}
-.btn-outline-success:hover{
-	opacity: 1;
-	-webkit-transition: 0.2s;
-	-o-transition: 0.2s;
-	transition: 0.2s;
-
+	font-size: 18px;
 }
 .section1{
 	margin-top: 130px;
@@ -82,9 +90,18 @@ a:hover{
 .middle-section{
 	padding: 100px 0px;
 	height: auto;
-	background-color: #6A9D2E;
+	background-color: var(--borders);
 	width: 100%;
 	color: white !important;
+}
+#itemname{
+	color: var(--light);
+}
+#viewmore{
+	color: var(--light) !important;
+}
+.navbar-toggler-icon{
+	background: var(--borders);
 }
 .carousel-item h3{
 	font-size: 20px !important;
@@ -103,7 +120,7 @@ a:hover{
 	width: 15px;
 	border-radius: 50%;
 	background-color: transparent;
-	border: 2px solid #153b51;
+	border: 2px solid var(--dark);
 	margin-right: 10px;
 }
 .carousel-indicators li:last-child{
@@ -112,7 +129,7 @@ a:hover{
 }
 .carousel-indicators .active{
 
-	background-color: #153b51;
+	background-color: var(--dark);
 }
 .carousel-indicators {
 
@@ -121,12 +138,13 @@ a:hover{
 .join-section{
 	padding:100px 0px;
 }
+
 .fas{
 	margin-right: 10px;
 }
 
 footer{
-	background-color: #153b51;
+	background-color: var(--light);
 	padding:70px 0px 20px;
 	color: white; 
 }
@@ -166,3 +184,191 @@ footer h4{
 		font-size: 20px;
 	}
 }
+
+
+#team {
+    background: #eee !important;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+    background-color: var(--borders);
+    border-color: var(--borders);
+    box-shadow: none;
+    outline: none;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: var(--borders);
+    border-color: var(--borders);
+}
+
+section {
+    padding: 60px 0;
+}
+
+section .section-title {
+    text-align: center;
+    color: var(--borders);
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+#team .card {
+    border: none;
+    background: var(--light);
+	color: white;
+}
+
+.image-flip:hover .backside,
+.image-flip.hover .backside {
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    border-radius: .25rem;
+	
+}
+
+.image-flip:hover .frontside,
+.image-flip.hover .frontside {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+
+.mainflip {
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -moz-transition: 1s;
+    -moz-transform: perspective(1000px);
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+.frontside {
+    position: relative;
+    -webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    z-index: 2;
+    margin-bottom: 30px;
+
+}
+
+.backside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+}
+
+.frontside,
+.backside {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -moz-transition: 1s;
+    -moz-transform-style: preserve-3d;
+    -o-transition: 1s;
+    -o-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+}
+
+.frontside .card,
+.backside .card {
+    min-height: 312px;
+	
+}
+
+.backside .card a {
+    font-size: 18px;
+    color: var(--borders) !important;
+}
+
+.frontside .card .card-title,
+.backside .card .card-title {
+    color: var(--borders) !important;
+}
+
+.frontside .card .card-body img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+/*deals*/
+
+body {
+	background: #f4f4f4;
+  }
+  
+  .banner {
+	background: #a770ef;
+	background: -webkit-linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
+	background: linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
+  }
+  .bgcolor{
+	  background: white !important;
+  }
+  /* .imageburger{
+	  height: 600px;
+  } */
+
+  .card-img-top{
+	  width: 100%;
+	  height: 300px;
+	  
+	}
+	.im1{
+		background: url('./img/b.jpg');
+		background-size: 100% 100%;
+	}
+	.im2{
+		background: url('./img/c.png');
+		background-size: 100% 100%;
+	}
+	.im3{
+		background: url('./img/b.jpg');
+		background-size: 100% 100%;
+	}
+		/*Other*/
+
+		.my-card
+		{
+			position:absolute;
+			left:40%;
+			top:-20px;
+			border-radius:50%;
+		}
+
+
+
+		
